[tool.poetry]
name = "mist-server"
version = "0.1.0"
description = ""
authors = ["Cristian Ticu <cristian.ticu@eggnita.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
